--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -23,5 +23,17 @@ header {
     z-index: 15;
     background: #000000;
 }
-
+/*Add header image*/
+header > div:nth-child(1) > img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    width: 80px;
+    height: 80px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 10px;
 }
+
