Myprofile styles add

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -36,4 +36,13 @@ header > div:nth-child(1) > img {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 10px;
 }
+/*Add header articele*/
+header > nav > article {
+    /*border: 1px solid red;*/
+    position: absolute;
+    right: 35px;
+    top: 22px;
+    font-size: 24px;
+    font-family: Tahoma, sans-serif;
+}
 
