--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -102,4 +102,40 @@ body > main > section:nth-child(1) > div:nth-child(2) {
 }
 body > main > section:nth-child(1) > nav:nth-child(3) > div {
 
+    position: relative;
+    width: 100%;
+    height: 90px;
+}
+body > main > section:nth-child(1) > nav:nth-child(3) > div {
+    position: absolute;
+    font-size: 50px;
+    left: 32px;
+    top: 90px;
+    text-decoration: none;
+    color: white;
+    transition: 0.5s;
+}
+body > main > section:nth-child(1) > nav:nth-child(3) > div > a > i:hover {
+    font-size: 51px;
+    color: #007bb6;
+    transition: 0.5s;
+}
+
+/*----------------------------------Page Two Style---------------------------------------------*/
+body > main > section:nth-child(2) {
+    width: 100%;
+    height: 710px;
+    position: relative;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: #fff;
+}
+.intro4 {
+    position: absolute;
+    left: 130px;
+    right: 20px;
+    height: 400px;
+}
+intro3{
+    top: 40px;
+
 }
