--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -134,6 +134,9 @@ body > main > section:nth-child(2) {
     left: 130px;
     right: 20px;
     height: 400px;
+    width: 400px;
+    border-style: none;
+
 }
 intro3{
     top: 40px;
